--- a/comments.html
+++ b/comments.html
@@ -1,3 +1,15 @@
 <!--
     1. function to generate cart automatically
--->
+    2.we are using x.name instead of shopItemsData.name because shopitem is an array so it wont work
+    and x is an object
+    3. .join 
+    4.why we did let {id,name,desc,price}= x 
+    because it is destructuring makes code easier to read 
+    instead of writing every time x.name x.price to fetch data
+    we with this property it will save id object present in x into a variable name id
+    so we now can directly fetch that variable object id
+    5.we are putting id in parent selector to give the whole product 
+    / or object / card an id
+    6.why we put id in quantity = every time we increment the thing/product 
+    we will target the id and then increment the number
+    7.update function to update the number/quantity in between increment and decrement-->
