--- a/comments.html
+++ b/comments.html
@@ -12,4 +12,7 @@
     / or object / card an id
     6.why we put id in quantity = every time we increment the thing/product 
     we will target the id and then increment the number
-    7.update function to update the number/quantity in between increment and decrement-->
+    7.update function to update the number/quantity in between increment and decrement
+    8.increment and decrement function needs to have id parameter otherwise we cannot call 
+    function with id
+    9.basket.find((x) => {})  Here x is used so that it checks all object one by one -->
