--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Clothing Store</h2>
     <div class="cart">
         <i class="bi bi-cart3"></i><!--cart icon because it will be visible-->
-        <div class="cartAmount">0</div>
+        <div id= "cartAmount" class="cartAmount">0</div>
     </div>
 </div>
 <div class="shop" id="shop"><!--overall div,class target by css, id target by java script-->
