--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
 <div class="shop" id="shop"><!--overall div,class target by css, id target by java script-->
 </div>
 </body>
-<script src="main.js"></script>
+<script src="src/main.js"></script>
 </html>
