till acrt page when empty

--- a/comments.html
+++ b/comments.html
@@ -15,4 +15,10 @@
     7.update function to update the number/quantity in between increment and decrement
     8.increment and decrement function needs to have id parameter otherwise we cannot call 
     function with id
-    9.basket.find((x) => {})  Here x is used so that it checks all object one by one -->
+    9.basket.find((x) => {})  Here x is used so that it checks all object one by one 
+    10.calculation function = number in red displayed over cart icon
+    happens after adding all update numbers thats why run after update
+    11.! operator is another way to write if(value === null)
+    so we can write (!value)
+    12.filter makes a new array excluding the one which do not fulfill the condition
+    13.module = basket calculation-->
