--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clothing Store</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <!--site icons.getbootstrap.com, copy CDN its in head-->
 </head>
 <body>
 <div class="navbar"><!--.navbar(class)+tab , navbar is parent selector so make flexbox in css under this class-->
+  <a href="index.html">
     <h2>Clothing Store</h2>
+  </a>
+   
+  <a href="cart.html">
     <div class="cart">
         <i class="bi bi-cart3"></i><!--cart icon because it will be visible-->
         <div id= "cartAmount" class="cartAmount">0</div>
     </div>
+  </a>
+
 </div>
+
 <div class="shop" id="shop"><!--overall div,class target by css, id target by java script-->
 </div>
 </body>
+<script src="src/Data.js"></script>
 <script src="src/main.js"></script>
 </html>
