--- a/comments.html
+++ b/comments.html
@@ -21,4 +21,9 @@
     11.! operator is another way to write if(value === null)
     so we can write (!value)
     12.filter makes a new array excluding the one which do not fulfill the condition
-    13.module = basket calculation-->
+    13.module = basket calculation  shopItemsData
+    14.in cart.js shopItemData.find(y) y stores all the object value of shopItemsData
+    so y.id is data.js object id then === id here id is from basket
+    we dont need to write basket.id because basket.map(x) is done and basket value is stored
+    in x then we write let{id.,item}=x; 
+    so in cart.js if you can find matching id then return it if cant find return empty array-->
